[project]
name = "langgraph-stateful-agent-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "python-dateutil>=2.8.2",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.0",
]
